--- a/Views/index.html
+++ b/Views/index.html
@@ -48,7 +48,7 @@
         <!-- Main component for a primary marketing message or call to action -->
         <div class="jumbotron">
             <h1>AngularJS</h1>
-            <p>Um simples exemplo de como utilizar herença de controller com AngularJS.</p>
+            <p>Um simples exemplo de como utilizar herança de controller com AngularJS.</p>
             <p>
                 <button class="btn btn-lg btn-success" role="button" ng-click="ctrl.sayHello('base')">Base Controller</button>
                 <button class="btn btn-lg btn-info" role="button" ng-click="ctrl.sayHello('index')">Index Controller</button>
